--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Заполните Объявление</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             padding: 20px;
-            background-color: var(--tg-theme-bg-color);
         }
 
         label {
             display: block;
             margin-top: 10px;
-            color: var(--tg-theme-text-color);
         }
 
         input[type="text"],
@@ -21,27 +18,41 @@
             width: 100%;
             padding: 5px;
             margin-top: 5px;
-            color: var(--tg-theme-text-color);
         }
 
         .submit-button {
             margin-top: 20px;
             padding: 10px 20px;
-            background-color: var(--tg-theme-button-color);
+            background-color: #4CAF50;
             color: white;
             border: none;
             cursor: pointer;
-            
         }
 
         .submit-button:hover {
             background-color: #45a049;
         }
+
+        /* Responsive styles */
+        @media only screen and (max-width: 600px) {
+            body {
+                padding: 10px;
+            }
+        }
+
+        @media only screen and (max-width: 400px) {
+            label {
+                font-size: 14px;
+            }
+            input[type="text"],
+            select {
+                font-size: 14px;
+            }
+            .submit-button {
+                font-size: 14px;
+            }
+        }
     </style>
-
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-
-
 </head>
 <body>
     <form id="my_form">
@@ -107,3 +118,5 @@
     </script>
 </body>
 </html>
+
+
