--- a/index.html
+++ b/index.html
@@ -11,26 +11,25 @@
         label {
             display: block;
             margin-top: 10px;
+            font-size: 16px;
         }
 
         input[type="text"],
         select {
             width: 100%;
-            padding: 5px;
+            padding: 8px;
             margin-top: 5px;
+            font-size: 16px;
         }
 
         .submit-button {
             margin-top: 20px;
-            padding: 10px 20px;
+            padding: 12px 24px;
             background-color: #4CAF50;
             color: white;
             border: none;
             cursor: pointer;
-        }
-
-        .submit-button:hover {
-            background-color: #45a049;
+            font-size: 16px;
         }
 
         /* Responsive styles */
@@ -47,9 +46,11 @@
             input[type="text"],
             select {
                 font-size: 14px;
+                padding: 6px;
             }
             .submit-button {
                 font-size: 14px;
+                padding: 10px 20px;
             }
         }
     </style>
@@ -118,5 +119,4 @@
     </script>
 </body>
 </html>
-
 
