--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
         body {
             font-family: Arial, sans-serif;
             padding: 20px;
+            background-color: var(--tg-theme-bg-color);
         }
 
         h1 {
             text-align: center;
+            color: var(--tg-theme-text-color);
         }
 
         form {
             margin-bottom: 20px;
+            background-color: var(--tg-theme-bg-color);
         }
 
         label {
             display: block;
             margin-top: 10px;
             font-weight: bold;
+            color: var(--tg-theme-text-color);
         }
 
         select, input[type="text"], input[type="number"] {
@@ -44,11 +48,12 @@
             width: 100%;
             padding: 10px;
             margin-top: 20px;
-            background-color: #4CAF50;
-            color: white;
+            background-color: var(--tg-theme-button-color);
+            color: var(--tg-theme-button-text-color);
             border: none;
             border-radius: 4px;
             cursor: pointer;
+
         }
 
         .submitted-message {
