--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             }
         }
     </style>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
     <h1>Заполните Объявление</h1>
