--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         select, input[type="text"], input[type="number"] {
             width: 100%;
             padding: 10px;
-            border: 1px solid #ccc;
+            border: 1px solid var(--tg-theme-bg-color);
             border-radius: 4px;
             box-sizing: border-box;
             margin-top: 5px;
@@ -41,6 +41,7 @@
 
         .slider {
             margin-top: 15px;
+            color: var(--tg-theme-bg-color);
         }
 
         .submit-button {
